--- a/decks/style.css
+++ b/decks/style.css
@@ -1,3 +1,21 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Share", cursive;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: var(--black);
+  color: var(--yellow);
+}
+
+.twitter_link {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  color: #9e9e9e;
+  font-size: 30px;
+}
+
 pre,
 code {
   background: transparent !important;
